# Following-Special-Friends-Telegram

./: .gitignore  Cargo.toml  README.md  config.ini.default  requirements.txt  watch.py
.github/workflows/: build-cross.yml  build.yml
data/: config.toml.default
rust/: Cargo.toml
rust/src/: configure.rs  functions.rs  main.rs
src/: configure.rs  functions.rs  main.rs
