[package]
name = "special-friends"
version = "3.1.0"
authors = ["KunoiSayami <i@leanhe.dev>"]
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11"
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
grammers-tl-gen = { git = "https://github.com/Lonami/grammers" }
grammers-tl-types = { git = "https://github.com/Lonami/grammers" }
kstool = "0.2.1"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
once_cell = "1.17"
reqwest = { version = "0.12", features = [
    "socks",
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
