[package]
name = "following-special-friends-tg"
version = "0.0.1"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
tokio = { version = "1", features = ["full"] }
simple_logger = "1.11.0"
log = "0.4.14"